--- a/styleSinglePage.css
+++ b/styleSinglePage.css
@@ -168,142 +168,116 @@ summary::-webkit-details-marker {
   height: 51px;
   background-color: #ffffff;
 }
-
-.content {
-  background-image: url(img/content_background.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  padding-top: 276px;
-  padding-bottom: 297px;
-}
-.content_title {
-  padding-left: 12px;
+.nav_text {
   font-family: Loto;
-  font-size: 60px;
-  line-height: 1.2;
-  font-weight: 900;
-  letter-spacing: 0.025em;
+  font-size: 14px;
+  line-height: 26px;
+  font-weight: 700;
+  text-transform: uppercase;
   color: #222222;
-  border-left: 12px solid #f16d7f;
 }
-.content_title_style2 {
-  font-size: 40px;
+
+.top_menu {
+  height: 148px;
+  background-color: #f8f3f4;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-.content_title_style3 {
-  font-size: 40px;
+.top_menu_left_text {
+  font-family: Loto;
+  font-size: 24px;
+  line-height: 20px;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #f16d7f;
+}
+.top_menu_right_nav {
+  font-family: Loto;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #636363;
+}
+.top_menu_right_nav:hover {
+  font-weight: 700;
   color: #f16d7f;
 }
 
-.content_top {
-  padding-top: 98px;
-  display: grid;
-  grid-template-columns: repeat(2, 560px);
-  grid-auto-rows: minmax(250px, auto);
-  gap: 20px;
-}
-.content_top_item1 {
-  background-image: url(img/backgrount_item1.png);
-  grid-row: 1/3;
-  padding-top: 26px;
-}
-.content_top_item1_box {
-  width: 145px;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-left: 20px;
-  padding-right: 20px;
-  background-color: #ffffff;
+.main_menu_top {
   display: flex;
-  flex-direction: column;
-  font-family: Lato;
+  align-items: center;
+  justify-content: space-between;
+  height: 777px;
+  background-color: #f7f7f7;
+  width: 100%;
+  border-top: 1px solid #eaeaea;
+}
+.main_menu_top_buttonleft {
+  width: 47px;
+  height: 47px;
+  background-color: rgba(42, 42, 42, 0.14);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main_menu_top_buttonright {
+  width: 47px;
+  height: 47px;
+  background-color: rgba(42, 42, 42, 0.14);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main_menu_bottom {
+  height: 730px;
+  background-color: #ffffff;
+  border: 1px solid #eaeaea;
+}
+.main_menu_bottom_top_title {
+  font-family: Loto;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 700;
+  color: #f16d7f;
+  background-color: #ffffff;
+  border-bottom: 1px solid #eaeaea;
+}
+.main_menu_bottom_top_titletext {
+  font-family: Loto;
   font-size: 18px;
-  line-height: 1.2;
+  line-height: 24px;
   font-weight: 900;
   text-transform: uppercase;
-  letter-spacing: 0.025em;
-  color: #222222;
+  color: #4d4d4d;
 }
-.content_top_item1_text_style2 {
-  font-size: 30px;
-  color: #f16d7f;
+.main_menu_bottom_top_text {
+  font-family: Loto;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 300;
+  color: #5e5e5e;
 }
-.content_top_item2 {
-  background-image: url(img/backgrount_item2.png);
-  background-repeat: no-repeat;
-  padding-top: 26px;
-}
-.content_top_item2_box {
-  width: 145px;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-left: 20px;
-  padding-right: 20px;
-  background-color: #ffffff;
+.main_menu_bottom_top_block {
   display: flex;
-  flex-direction: column;
-  font-family: Lato;
-  font-size: 18px;
-  line-height: 1.2;
-  font-weight: 900;
-  text-transform: uppercase;
-  letter-spacing: 0.025em;
-  color: #222222;
+  justify-content: center;
+  gap: 44px;
 }
-.content_top_item2_text_style2 {
-  font-size: 30px;
-  color: #f16d7f;
+.main_menu_bottom_top_block_text {
+  font-family: Loto;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 700;
+  color: #b9b9b9;
 }
-.content_top_item3 {
-  background-image: url(img/backgrount_item3.png);
-  padding-top: 26px;
+.main_menu_bottom_top_block_text_other {
+  color: #2f2f2f;
 }
-.content_top_item3_box {
-  width: 145px;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-left: 20px;
-  padding-right: 20px;
+.main_menu_bottom_top_coasttext {
   background-color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  font-family: Lato;
-  font-size: 18px;
-  line-height: 1.2;
-  font-weight: 900;
-  text-transform: uppercase;
-  letter-spacing: 0.025em;
-  color: #222222;
-}
-.content_top_item3_text_style2 {
-  font-size: 30px;
-  color: #f16d7f;
-}
-.content_top_item5 {
-  grid-row: 2/4;
-  background-image: url(img/backgrount_item4.png);
-  padding-top: 26px;
-}
-.content_top_item5_box {
-  width: 145px;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-left: 20px;
-  padding-right: 20px;
-  background-color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  font-family: Lato;
-  font-size: 18px;
-  line-height: 1.2;
-  font-weight: 900;
-  text-transform: uppercase;
-  letter-spacing: 0.025em;
-  color: #222222;
-}
-.content_top_item5_text_style2 {
-  font-size: 30px;
-  color: #f16d7f;
+  border-bottom: 1px solid #eaeaea;
 }
 
 .main_content {
@@ -313,13 +287,12 @@ summary::-webkit-details-marker {
   align-items: center;
 }
 .main_content_title {
-  color: #222222;
   font-family: Loto;
-  font-size: 30px;
-  font-style: normal;
-  line-height: 54px;
-  font-weight: 700;
-  letter-spacing: 0.025em;
+  font-size: 24px;
+  line-height: 20px;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #4d4d4d;
 }
 .main_content_text {
   color: #9f9f9f;
@@ -331,7 +304,7 @@ summary::-webkit-details-marker {
   letter-spacing: 0.025em;
 }
 .main_content_items {
-  margin-top: 60px;
+  margin-top: 72px;
   display: grid;
   grid-template-columns: repeat(4, 261px);
   gap: 30px;
@@ -342,17 +315,18 @@ summary::-webkit-details-marker {
 }
 .main_content_items_item_imgcontainer {
   position: relative;
-}
-.main_content_items_item_imgcontainer_img {
-  height: 100%;
-  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: #e9e9e9;
+  padding: 5px;
+  height: 280px;
 }
 .main_content_items_item_imgcontainer_mask_hiden {
   position: absolute;
   top: 0;
   display: block;
   width: 261px;
-  height: 284px;
+  height: 289px;
   background-color: rgb(58, 56, 56);
   opacity: 0;
   transition: opacity 0.6s linear;
@@ -382,7 +356,7 @@ summary::-webkit-details-marker {
 }
 .main_content_items_item_description {
   display: flex;
-  padding: 19px 14px;
+  padding: 18px 15px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -391,11 +365,11 @@ summary::-webkit-details-marker {
 }
 .main_content_items_item_description_title {
   font-family: Loto;
-  font-size: 13px;
+  font-size: 14px;
   line-height: 1.2;
   font-weight: 400;
   text-transform: uppercase;
-  color: #222222;
+  color: #6f6e6e;
 }
 .main_content_items_item_description_coast {
   font-family: Loto;
@@ -432,76 +406,12 @@ summary::-webkit-details-marker {
   background: #ffffff;
 }
 
-.content_bottom {
-  display: flex;
-}
-.content_bottom_left {
-  background: url(img/content_buttom_background.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  width: 100%;
-  padding-top: 146px;
-  padding-left: 39px;
-}
-.content_bottom_left_title {
-  font-family: Loto;
-  font-size: 53.7px;
-  line-height: 1.2;
-  font-weight: 700;
-  letter-spacing: 0.025em;
-  color: #ffffff;
-}
-.content_bottom_left_title_style2 {
-  color: #f16d7f;
-}
-.content_bottom_left_title_style3 {
-  font-size: 32.2px;
-}
-.content_bottom_rights {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  gap: 54px;
-  padding-top: 48px;
-  padding-left: 36px;
-  padding-right: 43px;
-  padding-bottom: 66px;
-  background-color: #222224;
-}
-.content_bottom_rights_item {
-  display: flex;
-  align-items: center;
-  align-items: flex-start;
-}
-.content_bottom_rights_item_text {
-  margin-left: 33px;
-  width: 219px;
-}
-.content_bottom_rights_item_text_title {
-  font-family: Loto;
-  font-size: 20px;
-  line-height: 1.2;
-  font-weight: 700;
-  letter-spacing: 0.025em;
-  color: #ffffff;
-}
-.content_bottom_rights_item_text_titletext {
-  margin-top: 17px;
-  font-family: Loto;
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: 300;
-  letter-spacing: 0.025em;
-  color: #ffffff;
-}
-
 .content_bottom_subcribe {
   position: relative;
   background: linear-gradient(rgba(242, 242, 242, 0.5), rgba(242, 242, 242, 0.5)), url(img/content_bottom_backgroud.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 0 22%;
   margin-top: 97px;
   position: relative;
   height: 500px;
@@ -688,4 +598,4 @@ summary::-webkit-details-marker {
 }
 .footer_social_right_link:hover {
   background-color: #f16d7f;
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=styleSinglePage.css.map */
