--- a/styleSinglePage.scss
+++ b/styleSinglePage.scss
@@ -178,143 +178,120 @@ summary::-webkit-details-marker {
   margin-bottom: 10px;
   height: 51px;
   background-color: #ffffff;
-}
-
-.content {
-  background-image: url(img/content_background.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  padding-top: 276px;
-  padding-bottom: 297px;
-  &_title {
-    padding-left: 12px;
+  &_text {
     font-family: $font-family;
-    font-size: 60px;
-    line-height: 1.2;
-    font-weight: 900;
-    letter-spacing: 0.025em;
-    color: #222222;
-    border-left: 12px solid #f16d7f;
-
-    &_style2 {
-      font-size: 40px;
-    }
-    &_style3 {
-      font-size: 40px;
-      color: #f16d7f;
-    }
+    font-size: 14px;
+    line-height: 26px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: $text-color-base;
   }
 }
-.content_top {
-  padding-top: 98px;
-  display: grid;
-  grid-template-columns: repeat(2, 560px);
-  grid-auto-rows: minmax(250px, auto);
-  gap: 20px;
 
-  &_item1 {
-    background-image: url(img/backgrount_item1.png);
-    grid-row: 1/3;
-    padding-top: 26px;
-    &_box {
-      width: 145px;
-      padding-top: 16px;
-      padding-bottom: 16px;
-      padding-left: 20px;
-      padding-right: 20px;
-      background-color: $background-color;
+.top_menu {
+  height: 148px;
+  background-color: #f8f3f4;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  &_left_text {
+    font-family: $font-family;
+    font-size: 24px;
+    line-height: 20px;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: #f16d7f;
+  }
+  &_right_nav {
+    font-family: $font-family;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: #636363;
+  }
+  &_right_nav:hover {
+    font-weight: 700;
+    color: #f16d7f;
+  }
+}
+.main_menu {
+  &_top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 777px;
+    background-color: #f7f7f7;
+    width: 100%;
+    border-top: 1px solid #eaeaea;
+    &_buttonleft {
+      width: 47px;
+      height: 47px;
+      background-color: rgba(42, 42, 42, 0.14);
       display: flex;
-      flex-direction: column;
-      font-family: Lato;
-      font-size: 18px;
-      line-height: 1.2;
-      font-weight: 900;
-      text-transform: uppercase;
-      letter-spacing: 0.025em;
-      color: #222222;
+      align-items: center;
+      justify-content: center;
     }
-    &_text_style2 {
-      font-size: 30px;
-      color: #f16d7f;
+    &_buttonright {
+      width: 47px;
+      height: 47px;
+      background-color: rgba(42, 42, 42, 0.14);
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
-  &_item2 {
-    background-image: url(img/backgrount_item2.png);
-    background-repeat: no-repeat;
-    padding-top: 26px;
-    &_box {
-      width: 145px;
-      padding-top: 16px;
-      padding-bottom: 16px;
-      padding-left: 20px;
-      padding-right: 20px;
-      background-color: $background-color;
-      display: flex;
-      flex-direction: column;
-      font-family: Lato;
-      font-size: 18px;
-      line-height: 1.2;
-      font-weight: 900;
-      text-transform: uppercase;
-      letter-spacing: 0.025em;
-      color: #222222;
-    }
-    &_text_style2 {
-      font-size: 30px;
-      color: #f16d7f;
-    }
-  }
-  &_item3 {
-    background-image: url(img/backgrount_item3.png);
-    padding-top: 26px;
-    &_box {
-      width: 145px;
-      padding-top: 16px;
-      padding-bottom: 16px;
-      padding-left: 20px;
-      padding-right: 20px;
-      background-color: $background-color;
-      display: flex;
-      flex-direction: column;
-      font-family: Lato;
-      font-size: 18px;
-      line-height: 1.2;
-      font-weight: 900;
-      text-transform: uppercase;
-      letter-spacing: 0.025em;
-      color: #222222;
-    }
-    &_text_style2 {
-      font-size: 30px;
-      color: #f16d7f;
-    }
-  }
+  &_bottom {
+    height: 730px;
+    background-color: #ffffff;
+    border: 1px solid #eaeaea;
+    &_top {
+      &_title {
+        font-family: $font-family;
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 700;
+        color: #f16d7f;
+        background-color: $background-color;
+        border-bottom: 1px solid #eaeaea;
+      }
+      &_titletext {
+        font-family: $font-family;
+        font-size: 18px;
+        line-height: 24px;
+        font-weight: 900;
+        text-transform: uppercase;
+        color: #4d4d4d;
+      }
+      &_text {
+        font-family: $font-family;
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 300;
+        color: #5e5e5e;
+      }
+      &_block {
+        display: flex;
+        justify-content: center;
+        gap: 44px;
 
-  &_item5 {
-    grid-row: 2/4;
-    background-image: url(img/backgrount_item4.png);
-    padding-top: 26px;
-    &_box {
-      width: 145px;
-      padding-top: 16px;
-      padding-bottom: 16px;
-      padding-left: 20px;
-      padding-right: 20px;
-      background-color: $background-color;
-      display: flex;
-      flex-direction: column;
-      font-family: Lato;
-      font-size: 18px;
-      line-height: 1.2;
-      font-weight: 900;
-      text-transform: uppercase;
-      letter-spacing: 0.025em;
-      color: #222222;
-    }
-    &_text_style2 {
-      font-size: 30px;
-      color: #f16d7f;
+        &_text {
+          font-family: $font-family;
+          font-size: 14px;
+          line-height: 24px;
+          font-weight: 700;
+          color: #b9b9b9;
+          &_other {
+            color: #2f2f2f;
+          }
+        }
+      }
+      &_coasttext {
+
+        background-color: #ffffff;
+        border-bottom: 1px solid #eaeaea;
+      }
     }
   }
 }
@@ -326,13 +303,12 @@ summary::-webkit-details-marker {
   align-items: center;
 
   &_title {
-    color: $text-color-base;
     font-family: $font-family;
-    font-size: 30px;
-    font-style: normal;
-    line-height: 54px;
-    font-weight: 700;
-    letter-spacing: 0.025em;
+    font-size: 24px;
+    line-height: 20px;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: #4d4d4d;
   }
   &_text {
     color: #9f9f9f;
@@ -344,7 +320,7 @@ summary::-webkit-details-marker {
     letter-spacing: 0.025em;
   }
   &_items {
-    margin-top: 60px;
+    margin-top: 72px;
     display: grid;
     grid-template-columns: repeat(4, 261px);
     gap: 30px;
@@ -353,16 +329,19 @@ summary::-webkit-details-marker {
       flex-direction: column;
       &_imgcontainer {
         position: relative;
+        display: flex;
+        justify-content: center;
+        background-color: #e9e9e9;
+        padding: 5px;
+        height: 280px;
         &_img {
-          height: 100%;
-          width: 100%;
         }
         &_mask_hiden {
           position: absolute;
           top: 0;
           display: block;
           width: 261px;
-          height: 284px;
+          height: 289px;
           background-color: rgba(58, 56, 56);
           opacity: 0;
           transition: opacity 0.6s linear;
@@ -393,7 +372,7 @@ summary::-webkit-details-marker {
       }
       &_description {
         display: flex;
-        padding: 19px 14px;
+        padding: 18px 15px;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
@@ -401,11 +380,11 @@ summary::-webkit-details-marker {
         background-color: $background-color;
         &_title {
           font-family: $font-family;
-          font-size: 13px;
+          font-size: 14px;
           line-height: 1.2;
           font-weight: 400;
           text-transform: uppercase;
-          color: $text-color-base;
+          color: #6f6e6e;
         }
         &_coast {
           font-family: $font-family;
@@ -413,7 +392,7 @@ summary::-webkit-details-marker {
           line-height: 1.2;
           font-weight: 700;
           text-transform: uppercase;
-          color: $text-color-decoration;
+          color: #f16d7f;
         }
       }
     }
@@ -447,73 +426,7 @@ summary::-webkit-details-marker {
     background: $background-color;
   }
 }
-.content_bottom {
-  display: flex;
 
-  &_left {
-    background: url(img/content_buttom_background.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    padding-top: 146px;
-    padding-left: 39px;
-
-    &_title {
-      font-family: $font-family;
-      font-size: 53.7px;
-      line-height: 1.2;
-      font-weight: 700;
-      letter-spacing: 0.025em;
-      color: $background-color;
-      &_style2 {
-        color: $text-color-decoration;
-      }
-      &_style3 {
-        font-size: 32.2px;
-      }
-    }
-  }
-
-  &_rights {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 54px;
-    padding-top: 48px;
-    padding-left: 36px;
-    padding-right: 43px;
-    padding-bottom: 66px;
-
-    background-color: #222224;
-    &_item {
-      display: flex;
-      align-items: center;
-      align-items: flex-start;
-      &_text {
-        margin-left: 33px;
-        width: 219px;
-        &_title {
-          font-family: $font-family;
-          font-size: 20px;
-          line-height: 1.2;
-          font-weight: 700;
-          letter-spacing: 0.025em;
-          color: $background-color;
-        }
-        &_titletext {
-          margin-top: 17px;
-          font-family: $font-family;
-          font-size: 14px;
-          line-height: 24px;
-          font-weight: 300;
-          letter-spacing: 0.025em;
-          color: $background-color;
-        }
-      }
-    }
-  }
-}
 .content_bottom_subcribe {
   position: relative;
   background: linear-gradient(
@@ -523,7 +436,7 @@ summary::-webkit-details-marker {
     url(img/content_bottom_backgroud.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 0 22%;
   margin-top: 97px;
   position: relative;
   height: 500px;
@@ -624,18 +537,7 @@ summary::-webkit-details-marker {
     }
   }
 }
-// .content_bottom_subcribe:before {
-//   content: '';
-//   display: block;
-//   width: 100%;
-//   height: 100%;
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   right: 0;
-//   bottom: 0;
-//   background-color: rgba(242, 242, 242, 0.5);
-// }
+
 .footer {
   display: flex;
   flex-direction: column;
