--- a/styleSinglePage.scss
+++ b/styleSinglePage.scss
@@ -246,7 +246,15 @@ summary::-webkit-details-marker {
     height: 730px;
     background-color: #ffffff;
     border: 1px solid #eaeaea;
+    padding-top: 73px;
+    padding-bottom: 122px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     &_top {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       &_title {
         font-family: $font-family;
         font-size: 14px;
@@ -257,6 +265,7 @@ summary::-webkit-details-marker {
         border-bottom: 1px solid #eaeaea;
       }
       &_titletext {
+        margin-top: 17px;
         font-family: $font-family;
         font-size: 18px;
         line-height: 24px;
@@ -265,16 +274,22 @@ summary::-webkit-details-marker {
         color: #4d4d4d;
       }
       &_text {
+        margin-top: 67px;
+        margin-left: 262px;
+        margin-right: 262px;
+        margin-bottom: 28px;
         font-family: $font-family;
         font-size: 14px;
         line-height: 24px;
         font-weight: 300;
         color: #5e5e5e;
+        font-family: Lato;
       }
       &_block {
         display: flex;
         justify-content: center;
         gap: 44px;
+        margin-bottom: 37px;
 
         &_text {
           font-family: $font-family;
@@ -288,9 +303,17 @@ summary::-webkit-details-marker {
         }
       }
       &_coasttext {
-
+        display: flex;
+        justify-content: center;
         background-color: #ffffff;
         border-bottom: 1px solid #eaeaea;
+        width: 642px;
+        padding-bottom: 43px;
+        font-family: $font-family;
+        font-size: 24px;
+        line-height: 24px;
+        font-weight: 700;
+        color: #ef5b70;
       }
     }
   }
@@ -400,22 +423,25 @@ summary::-webkit-details-marker {
   &_button {
     margin-top: 48px;
     margin-bottom: 113px;
-    width: 212px;
+
+    width: 537px;
+    height: 55px;
 
     flex-shrink: 0;
     border: 1px solid rgba(255, 106, 106, 1);
-    background: $text-color-decoration;
+    background-color: #ffffff;
     transition: background-color 0.6s;
 
     &_text {
       display: block;
-      margin-right: 9px;
-      font-family: $font-family;
+ 
+      font-family: Lato;
       font-size: 16px;
-      line-height: 48px;
+      line-height: 1.2;
       font-weight: 700;
+      color: #ef5b70;
       letter-spacing: 0.025em;
-      color: $background-color;
+
       transition: color 0.6s;
     }
     &_text:hover {
